# md_reader_arch

./: .gitignore  CMakeLists.txt  Readme.md  Ubaid_Interview_Prep.md  build.sh  commands.txt  install  new  summary.md  test
docs/: 2nd_step.md  3rd_step.md  4th_step.md  5th_step.md  6th_step.md  7th_step.md  8th_step.md  icon_and_style_standard.md
microservices/pdf_service/: requirements.txt  service.py  test_integration.py
pdf_service/: service.py
resources/: resources.qrc
resources/themes/: dark.qss  light.qss  preview-dark.css  preview-light.css
scripts/: download_icons.py
src/core/: Application.cpp  Application.h  PluginInterface.h  ServiceRegistry.cpp  ServiceRegistry.h  SettingsService.cpp  SettingsService.h  main.cpp
src/editor/: Editor.cpp  Editor.h  MarkdownHighlighter.cpp  MarkdownHighlighter.h
src/export/: ExportManager.cpp  ExportManager.h  HTMLExporter.cpp  HTMLExporter.h  PDFExporter.cpp  PDFExporter.h
src/filemanager/: AutosaveManager.cpp  AutosaveManager.h  FileManager.cpp  FileManager.h  WorkspaceManager.cpp  WorkspaceManager.h
src/markdown/: MarkdownRenderer.cpp  MarkdownRenderer.h
src/preview/: PreviewPane.cpp  PreviewPane.h
src/study/: Annotations.cpp  Annotations.h  NanomarkFile.cpp  NanomarkFile.h  StickyNotes.cpp  StickyNotes.h  StudyMode.cpp  StudyMode.h
src/themes/: ThemeManager.cpp  ThemeManager.h
src/ui/: CommandPalette.cpp  CommandPalette.h  Dashboard.cpp  Dashboard.h  MainWindow.cpp  MainWindow.h  PrintOptionsDialog.cpp  PrintOptionsDialog.h  TabManager.cpp  TabManager.h  WindowManager.cpp  WindowManager.h
src/utils/: ErrorHandler.cpp  ErrorHandler.h  Logger.cpp  Logger.h
tests/: CMakeLists.txt  test_renderer.cpp
